tests/cli/snapshots/cli__render__expect_no_diff_compares_the_output.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--expect-no-diff"
    - "--output"
    - docs/API.md
---
success: true
exit_code: 0
----- stdout -----
docs/API.md: up to date

----- stderr -----
