tests/cli/snapshots/cli__render__expect_no_diff_fails_on_a_missing_output.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--expect-no-diff"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × SPEC.md does not exist
  help: render again without `--expect-no-diff` to create it
