tests/cli/snapshots/cli__render__expect_no_diff_passes_an_up_to_date_output.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--expect-no-diff"
---
success: true
exit_code: 0
----- stdout -----
SPEC.md: up to date

----- stderr -----
