tests/cli/snapshots/cli__render__render_does_not_create_a_missing_directory.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "-o"
    - docs/SPEC.md
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × could not write docs/SPEC.md
  ╰─▶ No such file or directory (os error 2)
  help: create the directory docs first
