tests/cli/snapshots/cli__render__render_help.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Render a specification as Markdown, to `SPEC.md` by default

Usage: slcr render [OPTIONS] [FILE]

Arguments:
  [FILE]
          The requirements file to render: `.yaml`, `.yml`, `.json`, or `.toml`
          
          [default: SPEC.slcr.yml]

Options:
  -o, --output <PATH>
          Where to write the Markdown, or `-` for stdout. Defaults to FILE's name without its extension and any `.slcr` or `.spec`, plus `.md`, beside it: `SPEC.slcr.yml` renders to `SPEC.md`

      --force
          Replace the output even if it wasn't rendered by `slcr`

      --expect-no-diff
          Write nothing, and fail unless the output already holds exactly what FILE renders to

      --enable-colors <ENABLE_COLORS>
          Whether to color the output

          Possible values:
          - always: Always color the output
          - never:  Never color the output
          - auto:   Detect whether the terminal is a tty before deciding to color
          
          [default: auto]

      --log-level <LOG_LEVEL>
          Sets the maximum log level. Defaults to INFO. Options are 'trace', 'debug', 'info', 'warn', 'error', and 'off'. 'off' implies no logger will occur. Options are case-insensitive
          
          [env: LOG_LEVEL=]
          [default: info]

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
