tests/cli/snapshots/cli__render__render_leaves_an_up_to_date_output_alone.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
---
success: true
exit_code: 0
----- stdout -----
SPEC.md: up to date

----- stderr -----
