tests/cli/snapshots/cli__render__render_names_the_markdown_after_the_file.snap
---
source: tests/cli/render.rs
info:
  program: slcr
  args:
    - render
    - specs/todo-api.spec.yaml
---
success: true
exit_code: 0
----- stdout -----
specs/todo-api.md: rendered todo-api

----- stderr -----
